[project]
name = "spawnpoint"
description = "Spawn multi-repo worktree workspaces for feature development"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Mihir Gupta", email = "mihirgupta0900@gmail.com" },
]
keywords = ["git", "worktree", "workspace", "monorepo", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git",
]
dynamic = ["version"]
dependencies = [
    "typer>=0.9",
    "InquirerPy>=0.3",
    "rich>=13",
]

[project.urls]
Homepage = "https://github.com/mihirgupta0900/spawnpoint"
Repository = "https://github.com/mihirgupta0900/spawnpoint"
Issues = "https://github.com/mihirgupta0900/spawnpoint/issues"

[project.scripts]
spawnpoint = "spawnpoint.cli:app"
sp = "spawnpoint.cli:app"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/spawnpoint/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/spawnpoint"]
